--- a/web/app/themes/scb/assets/styles/components/_nav.scss
+++ b/web/app/themes/scb/assets/styles/components/_nav.scss
@@ -7,7 +7,6 @@
   }
 
   @include min-screen(783px) {
-    padding-top: 224px;
 
     .site-nav,
     .site-header {
