--- a/web/app/themes/scb/assets/styles/components/_project-categories.scss
+++ b/web/app/themes/scb/assets/styles/components/_project-categories.scss
@@ -13,6 +13,7 @@
 }
 
 .project-categories {
+  float: right;
   background: $white;
   position: relative;
   transition: transform .35s ease-out;
@@ -27,7 +28,7 @@
     top: 126px;
     width: 100%;
     position: fixed;
-    padding: 30px 20px 50px 50%;
+    padding: 0 20px 50px 50%;
     transform: translateY(-100%);
     transition: transform .35s ease-out;
     &.expanded {
@@ -54,11 +55,12 @@
     position: relative;
     display: inline-block;
     width: 100% * (1 / 3);
-    padding: 20px 20px 0 0;
+    padding: 18px 20px 0 0;
     li + li {
       margin-top: 20px;
     }
     li {
+      line-height: .8em;
       a {
         display: block;
         position: relative;
