--- a/web/app/themes/scb/assets/styles/pages/_home.scss
+++ b/web/app/themes/scb/assets/styles/pages/_home.scss
@@ -20,10 +20,6 @@ body.tax-project_category {
     }
   }
 
-  .page-intro {
-    padding-top: 10px;
-  }
-
   .content {
     h2 {
       @include h2();
