--- a/web/app/themes/scb/assets/styles/pages/_page.scss
+++ b/web/app/themes/scb/assets/styles/pages/_page.scss
@@ -15,6 +15,12 @@
     @include h2();
   }
 
+  &.-right {
+    p {
+      margin: 16px 0 0;
+    }
+  }
+
   @include min-screen($breakpoint-medium) {
     &.-left {
       padding-right: $column;
