--- a/web/app/themes/scb/assets/styles/pages/_projects.scss
+++ b/web/app/themes/scb/assets/styles/pages/_projects.scss
@@ -435,25 +435,6 @@
     }
     a {
       color: $black;
-      position: relative;
-      text-decoration: none;
-      transition: color .1s ease-out;
-      &::after {
-        bottom: 0;
-        height: 1px;
-        content: '';
-        left: .02em;
-        right: .2em;
-        background: $black;
-        position: absolute;
-        transition: background .1s ease-out;
-      }
-      &:hover {
-        color: $brand-primary;
-        &::after {
-          background: $brand-primary;
-        }
-      }
     }
 
     @include screen($breakpoint-medium, $breakpoint-large - 1) {
